--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,4 +14,7 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <button ion-button full icon-left (click)="changeTheme()" >
+    <ion-icon name="ios-sunny"></ion-icon>切换主题
+  </button>
 </ion-content>
