--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,82 +1,86 @@
 <ion-header>
-  <ion-grid>
-    <ion-row>
-      <ion-col col-auto>
-        <span class="logo"></span>
-      </ion-col>
-      <ion-col class="category">
-        <ion-slides #slider (ionSlideDidChange)="slideChanged()" (ionSlideTap)="tap()">
-          <ion-slide *ngFor="let slide of slides" class="category-item">
-            {{slide.title}}
-          </ion-slide>
-        </ion-slides>
-      </ion-col>
-      <ion-col col-auto>
-        <ion-icon name="heart"></ion-icon>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid>
+        <ion-row>
+        <ion-col col-auto no-padding class="header-text">
+            <!-- <img style="width: 85px; height: 30px;" src="../../assets/imgs/qingtingfm-pink.png" alt=""> -->
+            蜻1
+        </ion-col>
+        <ion-col class="category">
+            <ion-slides #slider (ionSlideDidChange)="slideChanged()" (ionSlideTap)="tap()">
+            <ion-slide *ngFor="let slide of slides" class="category-item">
+                {{slide.title}}
+            </ion-slide>
+            </ion-slides>
+        </ion-col>
+        <ion-col col-auto>
+            <ion-icon name="heart"></ion-icon>
+        </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-header>
 
 <ion-content>
-  <div class="slide-img">
-    <ion-slides autoplay="2500" loop="true">
-      <ion-slide *ngFor="let slide of slides" [ngStyle]="{'background' : 'url(' + slide.imageUrl + ')'}">
-        <h2>{{slide.title}}</h2>
-      </ion-slide>
-    </ion-slides>
-  </div>
-  <ion-list class="content-list">
-    <ion-list-header>
-      Action
-    </ion-list-header>
-    <ion-item *ngFor="let card of cards">
-      <ion-thumbnail item-start>
-        <img [src]="card.imageUrl">
-      </ion-thumbnail>
-      <h2>{{card.title}}</h2>
-      <p>{{card.description}}</p>
-    </ion-item>
-  </ion-list>
-  <ion-card *ngFor="let card of cards">
-    <img [src]="card.imageUrl" (click)="cardTapped(card)" />
-    <ion-card-content>
-      <h2 class="card-title">
-        {{card.title}}
-      </h2>
-      <p>
-        {{card.description}}
-      </p>
-    </ion-card-content>
-    <ion-row no-padding>
-      <ion-col col-4>
-        <button ion-button clear small color="danger" icon-left (click)="favorite(card)">
-          <ion-icon name='star'></ion-icon>
-          Favorite
-        </button>
-      </ion-col>
-      <ion-col text-center col-4>
-        <button ion-button clear small color="danger" icon-left (click)="listen(card)">
-          <ion-icon name='musical-notes'></ion-icon>
-          Listen
-        </button>
-      </ion-col>
-      <ion-col text-right col-4>
-        <button ion-button clear small color="danger" icon-left (click)="share(card)">
-          <ion-icon name='share-alt'></ion-icon>
-          Share
-        </button>
-      </ion-col>
-    </ion-row>
-  </ion-card>
+    <div class="slide-img">
+        <ion-slides autoplay="2500" loop="true">
+            <ion-slide *ngFor="let slide of slides" [ngStyle]="{'background' : 'url(' + slide.imageUrl + ')'}">
+                <h2>{{slide.title}}</h2>
+            </ion-slide>
+        </ion-slides>
+    </div>
+    <ion-list class="content-list" no-lines>
+            <ion-list-header no-margin>
+                Action
+            </ion-list-header>
+        <ion-item *ngFor="let card of cards">
+            <ion-thumbnail item-start>
+                <img [src]="card.imageUrl">
+            </ion-thumbnail>
+            <h2>{{card.title}}</h2>
+            <p>{{card.description}}</p>
+        </ion-item>
+    </ion-list>
+    <ion-card *ngFor="let card of cards">
+        <img [src]="card.imageUrl" (click)="cardTapped(card)" />
+        <ion-card-content>
+        <h2 class="card-title">
+            {{card.title}}
+        </h2>
+        <p>
+            {{card.description}}
+        </p>
+        </ion-card-content>
+        <ion-row no-padding>
+        <ion-col col-4>
+            <button ion-button clear small color="danger" icon-left (click)="favorite(card)">
+            <ion-icon name='star'></ion-icon>
+            Favorite
+            </button>
+        </ion-col>
+        <ion-col text-center col-4>
+            <button ion-button clear small color="danger" icon-left (click)="listen(card)">
+            <ion-icon name='musical-notes'></ion-icon>
+            Listen
+            </button>
+        </ion-col>
+        <ion-col text-right col-4>
+            <button ion-button clear small color="danger" icon-left (click)="share(card)">
+            <ion-icon name='share-alt'></ion-icon>
+            Share
+            </button>
+        </ion-col>
+        </ion-row>
+    </ion-card>
 
-  <h2>即将高仿蜻蜓FM，敬请期待!</h2>
-  <p>
-    加油，有梦想就去实现，想实现就赶紧行动，时间在追你。
-  </p>
-  <p>
-    梦想在启航，我心将飞翔.
-  </p>
+    <div padding>
+        <h2>即将高仿蜻蜓FM，敬请期待!</h2>
+        <p>
+            加油，有梦想就去实现，想实现就赶紧行动，时间在追你。
+        </p>
+        <p>
+            梦想在启航，我心将飞翔.
+        </p>
+    </div>
+
   <!--<div class="slide-img">
     <ion-slides #slider pager autoplay="2000" loop="true" (ionSlideDidChange)="onSlideChanged()" dir="ltr">
       <ion-slide *ngFor="let slide of slides" [ngStyle]="{'background':'url(' +slide.imageUrl+')'}">
